# application

./: .gitignore  DEPLOYMENT.md  GUIDELINES.md  Makefile  README.md  compose.yaml  compose.yml  docker-compose.prod.yml  docker-compose.yml
.benchmark/: laravel.js  symfony.js
.docker/: .gitignore
.docker/caddy/: Caddyfile  Caddyfile.prod
.docker/caddy/ssl/: .gitignore  install-ca
.docker/fusionauth/: kickstart.json
.docker/kafka-ui/: config.yaml
.docker/kong/config/: kong.yml
.docker/meilisearch/: .gitignore
.docker/nginx/: Dockerfile  nginx.conf  nginx.conf.dist
.docker/opentelemetry/: collector.yaml
.docker/php/: .gitignore  CERTIFICATES.md  Caddyfile  zzzz-custom.ini
.github/workflows/: build-and-run.yml  build.yml
bevy/base/: Cargo.toml
fiber/base/: go.mod  server.go
flask/base/: app.py
fresh/base/: README.md
learning-rust/grpc/: .gitignore  AGENT.md  Cargo.toml  build.rs
learning-rust/grpc/migration/: Cargo.toml
learning-rust/grpc/migration/src/: lib.rs  m20241209_000001_create_sudoku_puzzles_table.rs
learning-rust/grpc/proto/: factorial.proto  sudoku.proto
learning-rust/grpc/src/: client.rs  factorial_service.rs  lib.rs  server.rs  sudoku_service.rs
learning-rust/grpc/src/database/: mod.rs  persistence.rs
learning-rust/grpc/src/database/entities/: mod.rs  sudoku_puzzle.rs
learning-rust/grpc/src/proto/: generated_bindings.rs  mod.rs
learning-rust/grpc/src/services/: factorial_calculator_service.rs  mod.rs  sudoku_solver_service.rs
learning-rust/grpc/src/sudoku/: board.rs  mod.rs  solver.rs  test_puzzles.rs
nestjs/: build  ecosystem.config.js
nestjs/base/: .env.development  .env.production  .env.test  README.md  ecosystem.config.js  ecosystem.min.config.js  ormconfig.js  ormconfig.json  ormconfig.ts  tsconfig.json
nestjs/base-benchmark/: ecosystem.min.config.js
nodejs/: build
nodejs/base/: ormconfig.json  pm2.yaml
rocket/base/: Cargo.toml
symfony/: .editorconfig  build
symfony/base/: .env.dev  .env.dist  .env.local  .env.test.local  .gitignore  .rr.dev.yaml  .rr.min.yaml  .rr.prod.yaml  .rr.yaml  README.md  tailwind.config.js  webpack.config.js
vue/: .gitignore  build
(+109 files in other folders)
