[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.1"
tonic-reflection = "0.13.1"
prost = "0.13.5"
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "grpc-server"
path = "src/bin/grpc_server.rs"

[[bin]]
name = "demo-client"
path = "src/bin/demo_client.rs"
