[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = "1.1.2"

[dependencies.sea-orm]
version = "1.1.2"
features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
]
